--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
     <section>
         <div style="text-align: center;">
-            <img class="profile-pic" src="/Actividad5/Perfil.jpg" alt="Foto de perfil">
+            <img class="profile-pic" src="https://github.com/Hyasmin96/Hyasmin96.github.io/blob/main/Perfil.jpg?raw=true" alt="Foto de perfil">
         </div>
     </section>
 
